KC-8132 Support master-slave & master-readreplica

--- a/metric_filter_config.yml
+++ b/metric_filter_config.yml
@@ -26,7 +26,7 @@ SYS.ELB:
     - m22_in_bandwidth
     - m23_out_bandwidth
 SYS.RDS:
-  rds_cluster_id:
+  rds_instance_id:
     - rds001_cpu_util
     - rds002_mem_util
     - rds003_iops
